# openbangla-fcitx5-freebsd

./: CMakeLists.txt  README.adoc
cmake/: CMakeCargo.cmake
src/engine/: CMakeLists.txt
src/engine/fcitx/: CMakeLists.txt
src/frontend/: CMakeLists.txt
